<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- General -->
    <string name="khameleon">Khameleon</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="something_went_wrong_reason">Something went wrong (%s)</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>

    <!-- Authentication -->
    <string name="authentication_message">To use the app, you need to connect\nwith your Google account.</string>
    <string name="authentication_not_a_member">You are not a member of Khameleon Band.</string>

    <!-- Home -->
    <string name="chat">Chat</string>
    <string name="calendar">Calendar</string>
    <string name="songs">Songs</string>
    <string name="settings">Settings</string>

    <!-- Chat -->
    <string name="new_message">Message</string>
    <string name="thumbs_up">Like</string>
    <string name="send_gif">GIF</string>
    <string name="new_poll">Poll</string>
    <string name="search_gifs">Search for GIF-s</string>
    <string name="enter_your_message">Message</string>
    <string name="enter_your_question">Question</string>
    <string name="option_1">Option 1</string>
    <string name="option_2">Option 2</string>
    <string name="option_3">Option 3</string>
    <string name="option_4">Option 4</string>
    <string name="option_5">Option 5</string>
    <string name="this_is_an_announcement">This is an announcement</string>
    <string name="send">Send</string>
    <string name="new_messages">New messages</string>
    <string name="message_modification_error_automatic">You cannot modify automatic messages</string>
    <string name="message_modification_error">You can only modify your own messages</string>
    <string name="select_an_option">Select an option</string>
    <string name="edit_message">Edit message</string>
    <string name="delete_message">Delete message</string>
    <string name="delete_message_title">Are you sure?</string>
    <string name="delete_message_message">This will permanently delete the message.</string>
    <string name="delete">Delete</string>
    <string name="day_modified">%1$s modified the day %2$s.</string>
    <string name="song_added_pattern">%1$s added the song %2$s - %3$s.</string>
    <string name="song_deleted_pattern">%1$s deleted the song %2$s - %3$s.</string>
    <string name="rehearsal_starts_from">The rehearsal starts from %s.</string>
    <string name="meetup_at">The meetup will be at %s.</string>
    <string name="gig_at">The concert will be at %s.</string>

    <!-- Calendar -->
    <string name="today">Today</string>
    <array name="calendar_days">
        <item>Sun</item>
        <item>Mon</item>
        <item>Tue</item>
        <item>Wed</item>
        <item>Thu</item>
        <item>Fri</item>
        <item>Sat</item>
    </array>
    <array name="calendar_months">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </array>
    <string name="empty">Nothing special</string>
    <string name="busy">Busy</string>
    <string name="gig">Gig</string>
    <string name="meetup">Meetup</string>
    <string name="rehearsal">Rehearsal</string>
    <string name="description_pattern">%1$s (%2$s)</string>
    <string name="save">Save</string>
    <string name="new_gig">New gig</string>
    <string name="new_meetup">New meetup</string>
    <string name="enter_location">Enter the location</string>
    <string name="good_for_me_title">Good for me</string>
    <string name="good_for_me_description">I am free on this day</string>
    <string name="not_good_for_me_description">I am busy on this day</string>
    <string name="availability">Availability</string>
    <string name="the_day_is_good_for_everybody">This day is good for everybody.</string>
    <string name="somebody_is_busy_on_this_day">Somebody is busy on this day.</string>
    <string name="who_has_other_plans">Who has other plans</string>
    <string name="rehearsal_today">Rehearsal today from %s.</string>
    <string name="gig_today">Gig today. %s</string>
    <string name="meetup_today">Meetup today. %s</string>

    <!-- Songs -->
    <string name="export_list">Export list</string>
    <string name="sorting_mode">Sorting mode</string>
    <string name="play">Play</string>
    <string name="lyrics">Lyrics</string>
    <string name="new_song">New song</string>
    <string name="edit_song">Edit song</string>
    <string name="add">Add</string>
    <string name="enter_song_artist">Artist</string>
    <string name="enter_song_title">Title</string>
    <string name="enter_song_key">Key</string>
    <string name="enter_song_bpm">BPM</string>
    <string name="undo">Undo</string>
    <string name="song_deleted">%s deleted</string>
    <string name="highlight_song">Important</string>
    <string name="archive_song">Archived</string>
    <string-array name="keys">
        <item>"?"</item>
        <item>C</item>
        <item>C#</item>
        <item>D</item>
        <item>D#</item>
        <item>E</item>
        <item>F</item>
        <item>F#</item>
        <item>G</item>
        <item>G#</item>
        <item>A</item>
        <item>A#</item>
        <item>B</item>
    </string-array>

    <!-- Settings -->
    <string name="notifications">Notifications</string>
    <string name="chat_messages">Chat messages</string>
    <string name="push_chat_enabled">You will receive notifications about all messages.</string>
    <string name="push_chat_disabled">You will not receive any message notifications.</string>
    <string name="event_reminders">Event reminders</string>
    <string name="push_events_enabled">You will receive notifications before gigs, rehearsals and meetups.</string>
    <string name="push_events_disabled">You will not receive any event notifications.</string>
    <string name="about">About the app</string>
    <string name="check_for_updates">Check for updates</string>
    <string name="app_version">The current version is v%s</string>
    <string name="account">Account</string>
    <string name="sign_out">Sign out</string>
    <string name="sign_out_description">Deauthenticate with your Google account</string>
    <string name="sign_out_confirmation_title">Are you sure?</string>
    <string name="sign_out_confirmation_message">Are you sure you want to sign out of the application?</string>

</resources>