<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <!--suppress AndroidUnknownAttribute -->
    <data class=".MessageModifyDialogBinding" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/large_content_padding">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/content_padding"
            android:fontFamily="sans-serif-medium"
            android:paddingEnd="@dimen/content_padding"
            android:paddingStart="@dimen/content_padding"
            android:paddingTop="@dimen/content_padding"
            android:text="@string/select_an_option"
            android:textColor="@color/primary" />

        <TextView
            android:id="@+id/edit_message"
            android:layout_width="match_parent"
            android:layout_height="@dimen/touch_target"
            android:background="?attr/selectableItemBackground"
            android:gravity="center_vertical"
            android:paddingEnd="@dimen/large_content_padding"
            android:paddingStart="@dimen/large_content_padding"
            android:text="@string/edit_message" />

        <TextView
            android:id="@+id/delete_message"
            android:layout_width="match_parent"
            android:layout_height="@dimen/touch_target"
            android:background="?attr/selectableItemBackground"
            android:gravity="center_vertical"
            android:paddingEnd="@dimen/large_content_padding"
            android:paddingStart="@dimen/large_content_padding"
            android:text="@string/delete_message" />

    </LinearLayout>

</layout>