<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <!--suppress AndroidUnknownAttribute -->
    <data class=".DayDetailDialogBinding">

        <variable
            name="viewModel"
            type="com.pandulapeter.khameleon.feature.home.calendar.DayDetailBottomSheetViewModel" />

    </data>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipToPadding="false"
        android:paddingBottom="@dimen/large_content_padding"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/large_content_padding"
                android:fontFamily="sans-serif-medium"
                android:textColor="@color/primary"
                tools:text="Date" />

            <TextView
                android:id="@+id/empty"
                android:layout_width="match_parent"
                android:layout_height="@dimen/touch_target"
                android:background="?attr/selectableItemBackground"
                android:drawablePadding="@dimen/drawable_padding"
                android:drawableStart="@drawable/ic_day_empty_24dp"
                android:gravity="center_vertical"
                android:paddingEnd="@dimen/large_content_padding"
                android:paddingStart="@dimen/large_content_padding"
                android:text="@string/empty" />

            <TextView
                android:id="@+id/rehearsal"
                android:layout_width="match_parent"
                android:layout_height="@dimen/touch_target"
                android:background="?attr/selectableItemBackground"
                android:drawablePadding="@dimen/drawable_padding"
                android:drawableStart="@drawable/ic_day_rehearsal_24dp"
                android:gravity="center_vertical"
                android:paddingEnd="@dimen/large_content_padding"
                android:paddingStart="@dimen/large_content_padding"
                android:text="@string/rehearsal" />

            <TextView
                android:id="@+id/gig"
                android:layout_width="match_parent"
                android:layout_height="@dimen/touch_target"
                android:background="?attr/selectableItemBackground"
                android:drawablePadding="@dimen/drawable_padding"
                android:drawableStart="@drawable/ic_day_gig_24dp"
                android:gravity="center_vertical"
                android:paddingEnd="@dimen/large_content_padding"
                android:paddingStart="@dimen/large_content_padding"
                android:text="@string/gig" />

            <TextView
                android:id="@+id/meetup"
                android:layout_width="match_parent"
                android:layout_height="@dimen/touch_target"
                android:background="?attr/selectableItemBackground"
                android:drawablePadding="@dimen/drawable_padding"
                android:drawableStart="@drawable/ic_day_meetup_24dp"
                android:gravity="center_vertical"
                android:paddingEnd="@dimen/large_content_padding"
                android:paddingStart="@dimen/large_content_padding"
                android:text="@string/meetup" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/content_padding"
                android:layout_marginEnd="@dimen/large_content_padding"
                android:layout_marginStart="@dimen/large_content_padding"
                android:layout_marginTop="@dimen/large_content_padding"
                android:fontFamily="sans-serif-medium"
                android:text="@string/availability"
                android:textColor="@color/primary" />

            <android.support.v7.widget.SwitchCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small_content_padding"
                android:checked="@={viewModel.goodForMe}"
                android:gravity="center_vertical"
                android:minHeight="@dimen/touch_target"
                android:paddingEnd="@dimen/large_content_padding"
                android:paddingStart="@dimen/large_content_padding"
                app:description="@{viewModel.goodForMe ? @string/good_for_me_description : @string/not_good_for_me_description}"
                app:title="@{@string/good_for_me_title}"
                tools:text="@string/good_for_me_title" />

            <TextView
                android:id="@+id/status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/content_padding"
                android:layout_marginStart="@dimen/content_padding"
                android:layout_marginTop="@dimen/small_content_padding"
                android:fontFamily="sans-serif-medium"
                android:padding="@dimen/content_padding"
                android:textColor="@color/dark"
                tools:text="@string/the_day_is_good_for_everybody" />

            <LinearLayout
                android:id="@+id/busy_users_container"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="@dimen/content_padding" />

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

</layout>